2005-11-18    <bilboed@dvdsrc.fluendo.com>

	* gst/playback/gstdecodebin.c: (gst_decode_bin_init): 
	Unsetting IS_SINK flag from the fakesink, so decodebin
	never behaves as a sink.

2005-11-17  Wim Taymans  <wim@fluendo.com>

	* gst-libs/gst/audio/gstbaseaudiosrc.c:
	(gst_base_audio_src_change_state):
	Fix the audiosrc base class again, we did not unflush.

2005-11-17  Julien MOUTTE  <julien@moutte.net>

	* examples/seeking/seek.c: (make_dv_pipeline),
	(make_vorbis_theora_pipeline), (make_avi_pipeline),
	(make_mpegnt_pipeline): Use VSINK everywhere, add a scaler
	to ogg/vorbis/theora pipeline.

2005-11-17  Wim Taymans  <wim@fluendo.com>

	* ext/ogg/gstoggmux.c: (gst_ogg_mux_queue_pads),
	(gst_ogg_mux_get_headers), (gst_ogg_mux_send_headers),
	(gst_ogg_mux_collected), (gst_ogg_mux_change_state):
	Fix EOS on multiple streams.
	More debugging.

2005-11-16  Wim Taymans  <wim@fluendo.com>

	* ext/ogg/gstoggdemux.c: (gst_ogg_demux_configure_segment),
	(gst_ogg_demux_perform_seek):
	Segment done must include stream time.

	* ext/ogg/gstoggmux.c: (gst_ogg_mux_class_init),
	(gst_ogg_mux_clear), (gst_ogg_mux_init), (gst_ogg_mux_finalize),
	(gst_ogg_mux_change_state):
	Fix ogg muxer again.

2005-11-16  Wim Taymans  <wim@fluendo.com>

	* ext/ogg/gstogmparse.c: (gst_ogm_audio_parse_init):
	Fix compile again.

2005-11-16  Thomas Vander Stichele  <thomas at apestaart dot org>

	* ext/libvisual/visual.c: (gst_visual_init):
	* ext/ogg/gstoggdemux.c: (gst_ogg_demux_init):
	* ext/ogg/gstoggparse.c: (gst_ogg_parse_init),
	(gst_ogg_parse_chain):
	* ext/ogg/gstogmparse.c: (gst_ogm_audio_parse_init),
	(gst_ogm_video_parse_init), (gst_ogm_text_parse_init):
	* ext/theora/theoradec.c: (gst_theora_dec_init):
	* ext/theora/theoraenc.c: (gst_theora_enc_init):
	* ext/vorbis/vorbisdec.c: (gst_vorbis_dec_init):
	* ext/vorbis/vorbisparse.c: (gst_vorbis_parse_init):
	* gst/adder/gstadder.c: (gst_adder_class_init),
	(gst_adder_dispose):
	* gst/audiorate/gstaudiorate.c: (gst_audiorate_init):