@@ -1,3 +1,9 @@
+2005-11-18  Julien MOUTTE  <julien@moutte.net>
+
+	* gst/videoscale/gstvideoscale.c: (gst_videoscale_class_init),
+	(gst_videoscale_fixate_caps): Introduce back caps fixate with
+	handling of PAR.
+
 2005-11-18    <bilboed@dvdsrc.fluendo.com>
 
 	* gst/playback/gstdecodebin.c: (gst_decode_bin_init): 
